--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,14 @@
-#padding{
+#title-container{
     padding: 6% 15%;
 }
 
 #title{
     background-color: #ff4c68;
+}
+
+.button-download-text{
+    margin-left: 10px;
+    font-style: normal;
 }
 
 #heading{
@@ -35,33 +40,13 @@
     text-align: center;
 }
 
-#tick{
+.features-icon{
     color: #ff4c68;
     font-size: 50px;
     padding-bottom: 10px;
 }
 
-#tick:hover{
-    color: black;
-}
-
-#circle{
-    color: #ff4c68;
-    font-size: 50px;
-    padding-bottom: 10px;
-}
-
-#circle:hover{
-    color: black;
-}
-
-#heart{
-    color: #ff4c68;
-    font-size: 50px;
-    padding-bottom: 10px;
-}
-
-#heart:hover{
+.features-icon:hover{
     color: black;
 }
 
@@ -84,12 +69,12 @@
     font-family: 'Fredoka One', cursive;
 }
 
-#dogImage{
+.testimonial-image{
     border-radius: 100%;
     width: 15%;
 }
 
-#dogname{
+.testimonial-text{
     margin-left: 20px;
     color: white;
 }
@@ -104,16 +89,6 @@
 .pressImage{
     width: 20%;
     padding: 0 30px;
-}
-
-#ladyImage{
-    border-radius: 100%;
-    margin-right: 20px;
-    width: 15%;
-}
-
-#ladyname{
-    color: white;
 }
 
 #pricing{
@@ -146,29 +121,6 @@
     padding-bottom: 50px;
 }
 
-@media (max-width: 1024px){
-
-    #padding{
-        text-align: center;
-    }
-
-    #phoneImage{
-        position: static;
-        transform: rotate(0deg);
-        padding-left: 0px;
-        padding-top: 40px;
-    }
-
-    .dogCom{
-        margin-left: 100px;
-        margin-right: 100px;
-    }
-
-    #pricing{
-        margin: 50px 40px;
-    }
-}
-
 #footer{
     padding-top: 6%;
     padding-bottom: 6%;
@@ -177,4 +129,139 @@
 
 .social-icon{
     margin: 10px;
+}
+
+@media (max-width: 1024px){
+    #brand{
+        font-size: 70px;
+        margin-left: 20px;
+    }
+
+    #collapse-button{
+        font-size: 50px;
+        margin-right: 20px;
+    }
+
+    .collapse-link{
+        font-size: 50px;
+    }
+
+    #title-container{
+        text-align: center;
+    }
+
+    #heading{
+        font-size: 90px;
+    }
+
+    .button-download{
+        margin: 30px 10px;
+    }
+
+    .button-download-icon{
+        font-size: 50px;
+    }
+
+    .button-download-text{
+        margin-left: 10px;
+        font-style: normal;
+        font-size: 40px;
+    }
+
+    .features-icon{
+        font-size: 130px;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+
+    .features-text-h3{
+        font-size: 50px;
+    }
+
+    .features-text-p{
+        font-size: 30px;
+    }
+
+    .dogCom{
+        font-size: 70px;
+        margin-bottom: 140px;
+        margin-left: 100px;
+        margin-right: 100px;
+    }
+
+    .testimonial-image{
+        width: 30%;
+    }
+
+    .testimonial-text{
+        font-size: 50px;
+    }
+
+    .pressImage{
+        width: 40%;
+        margin: 50px;
+    }
+
+    #pricing{
+        margin: 50px 40px;
+    }
+
+    #pricingText{
+        font-size: 50px;
+    }
+
+    #pricing-P{
+        font-size: 25px;
+    }
+
+    #phoneImage{
+        height: 900px;
+        position: static;
+        transform: rotate(0deg);
+        padding-left: 0px;
+        padding-top: 40px;
+    }
+
+    .card-heading{
+        font-size: 50px;
+    }   
+
+    .cardTitle{
+        font-size: 70px;
+    }
+
+    .cardText{
+        font-size: 30px;
+    }
+
+    #cardButton1{
+        font-size: 50px;
+    }
+
+    #cardButton2{
+        font-size: 50px;
+    }
+
+    #cardButton3{
+        font-size: 50px;
+    }
+
+    #lastText{
+        font-size: 70px;
+    }
+
+    /* id:cta same as title section */
+
+    #cta{
+        height: 600px;
+    }
+
+    .social-icon{
+        font-size: 35px;
+    }
+
+    .copyright{
+        font-size: 20px;
+    }
+
 }
